# LatentAudio

./: .gitignore  Analysis.ipynb  Installation.ipynb  Preprocess.ipynb  Process.ipynb  README.md  configuration.json  pyproject.toml  requirements.txt  utilities.py
adapters/: layer_wise.py
configurations/: complete configuration.json  loader.py  simple configuration (combined).json  simple configuration.json  simple.json
models/: 5 stages 10 epochs 10 batches.h5  5 stages 2 epochs 2 batches.h5
models/Layer 0/: PCA 16.pkl  Standard Scaler.pkl
models/Layer 1/: Standard Scaler.pkl
models/Layer 10/: PCA 16.pkl  PCA 64.pkl  Standard Scaler.pkl
models/Layer 11/: PCA 16.pkl  PCA 64.pkl  Standard Scaler.pkl
models/Layer 12/: PCA 16.pkl  PCA 64.pkl  Standard Scaler.pkl
models/Layer 13/: PCA 16.pkl  PCA 64.pkl  Standard Scaler.pkl
models/Layer 2/: PCA 16.pkl  Standard Scaler.pkl
models/Layer 3/: PCA 16.pkl  Standard Scaler.pkl
models/Layer 4/: PCA 16.pkl  Standard Scaler.pkl
other/: Loss Adjustment.ipynb  Preprocess.ipynb
scripts/: apply_scalers_and_PCA_to_latent_yamnet.py  audio_to_latent_yamnet.py  augment_audio copy.py  augment_audio.py  create_scalers_and_PCA_model_for_latent_yamnet copy.py  create_scalers_and_PCA_model_for_latent_yamnet.py  disentangle copy.py  disentangle.py  evaluate_disentangle copy.py  evaluate_disentangle.py  explore_latent_yamnet  explore_latent_yamnet copy.py  explore_latent_yamnet.py  latent_yamnet_to_calibration_data_set copy.py  latent_yamnet_to_calibration_data_set.py  main.py  slice_sounds_for_humans.py  split_latent_yamnet_into_calibration_and_test_sets.py
(+60495 files in other folders)
