[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "LatentAudio"
version = "0.0.1"
authors = [
  { name="Tim Dick", email="timdi@icloud.com" },
]
description = "A processing pipeline for disentangling latent representations in auditory event recognition."
readme = "README.md"
requires-python = ">=3.9,<3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sphinx == 5.2.3",
    "sphinx-rtd-theme",
    "soundfile>= 0.12.1",
    "gyoza>=0.1.9",
    "scikit-learn == 1.3.0",
    "scipy>=1.11.1",
    "matplotlib >= 3.5.3",
    "numpy >= 1.21.6, < 1.25",
    "tensorflow == 2.9"
]
